testsuite/tests/properties/invalid_node_builder/to_builder_non_node.lkt
import common

class Example: BaseExample {
    @ignored fun p(): Int = {
        val i = 0;
        val b = i.to_builder();
        b.build()
    }
}
